--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <email-reference-generator darkmode="true"></<body></email-reference-generator>
+  <email-reference-generator darkmode="true"></email-reference-generator>
 
   <script>
     const emailGenerator = document.querySelector("email-reference-generator");
